# rp2350-FreeRTOS

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
